# somebuild

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  run.sh
.github/workflows/: pre-commit.yml  rust.yml
src/: bars.rs  command.rs  decompress.rs  downloader.rs  log.rs  main.rs  paths.rs  somebuild_config.rs  somebuild_parser.rs
test_packages/bash/: SOMEBUILD.toml
test_packages/elfutils/: SOMEBUILD.toml
test_packages/tar/: SOMEBUILD.toml
test_packages/xz/: SOMEBUILD.toml
