[package]
name = "somebuild"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.9", features = ["tokio", "all"] }
blake3 = "1.5.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
indicatif = { version="0.17.8", features = ["tokio"] }
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["stream"] }
run_script = "0.10.1"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tar = "0.3.1"
tokio-util = "0.7.11"
toml = "0.8.12"
url = "2.5.0"
